* Hashers moved to API level of utils ( because GWT really provides java.security.* package )